# rules_doxygen

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  version.bzl
.github/: .gitignore  release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel
doxygen/: BUILD.bazel  defs.bzl  doxygen.cfg  repositories.bzl
doxygen/private/: BUILD.bazel  doxygen.bzl  doxygen_action_runner.cc  doxygen_runner.cc
doxygen/private/toolchains/: BUILD.bazel
tests/binary/: BUILD.bazel  main.cc
tests/config_generation/: BUILD.bazel  config_diff_test.cc
tests/doxygen_runner/: BUILD.bazel
tools/homebrew/: brew.bzl
