load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "doxygen_action_runner",
    srcs = ["doxygen_action_runner.cc"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "doxygen_runner",
    srcs = ["doxygen_runner.cc"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//doxygen:__pkg__"],
)
