load("//doxygen/private:doxygen.bzl", "doxygen_toolchain")

doxygen_toolchain(
    name = "doxygen_toolchain_impl",
    doxygen = "//3rdparty/doxygen",
    tags = ["maual"],
    visibility = ["//visibility:public"],
)

toolchain(
    name = "doxygen_toolchain",
    tags = ["maual"],
    toolchain = ":doxygen_toolchain_impl",
    toolchain_type = "@rules_doxygen//doxygen:toolchain_type",
    visibility = ["//visibility:public"],
)
